--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -30,7 +30,7 @@ textarea {
     top: 100;
     width: 100%;
     padding: 1em;
-    background-color: #575279;
+    background-color: #9893a5;
     text-align: center;
     margin: 0;
 }
@@ -41,7 +41,7 @@ textarea {
     bottom: 0;
     width: 100%;
     padding: 1em;
-    background-color: #575279;
+    background-color: #9893a5;
     text-align: center;
 }
 
@@ -50,7 +50,7 @@ textarea {
 }
 
 .editing-textarea {
-    width: 80%;
+    width: 100%;
     height: 50%;
 }
 
