--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,22 +1,28 @@
-body {
+* {
     margin: 0;
     padding: 0;
     font-family: 'Inconsolata', monospace;
-    background-color: #faf4ed;
+    list-style-type: none;
+    text-decoration: none;
 }
 
-li {
-    list-style-type: none;
+body {
+    background-color: #faf4ed;
+    color: #191724;
 }
 
 a {
-    text-decoration: none;
     color: #191724;
-    font-size: large;
 }
 
-textarea {
-    background-color: #faf4ed;
+textarea,
+input {
+    background-color: #fffaf3;
+}
+
+.dark-theme {
+    background-color: #393552;
+    color: #faf4ed;
 }
 
 .container {
@@ -49,9 +55,16 @@ textarea {
     margin: 2em;
 }
 
-.editing-textarea {
+.width-100 {
     width: 100%;
+}
+
+.height-50 {
     height: 50%;
+}
+
+.mb-1 {
+    margin-bottom: 1%;
 }
 
 
